@@ -24,9 +24,9 @@
 ;  DISCLAMED. This includes but is not limited to warrenties of
 ;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 ;
-; $Revision: 1.3 $
+; $Revision: 1.4 $
 ; $Author: dannysmith $
-; $Date: 2002-01-11 19:52:49 $
+; $Date: 2002-01-11 21:53:48 $
 ;
 EXPORTS
 _CIacos
@@ -546,7 +546,7 @@ asctime
 asin
 atan
 atan2
-atexit DATA
+atexit
 atof
 atoi
 atol
