@@ -1,3 +1,9 @@
+2002-10-12  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* msvcrt.def: Revert accidental change.
+	* include/stdlib.h: Ditto. 
+
+
 2001-12-07  Earnie Boyd  <earnie@users.sf.net>
 
 	* Makefile.in: Increment VERSION.
